--- a/gender-classification.ipynb
+++ b/gender-classification.ipynb
@@ -11,7 +11,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from tensorflow.keras import utils\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from tensorflow.keras.layers import Input, Dense, Dropout\n",
@@ -57,8 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "46bd8afd",
+   "execution_count": 2,
+   "id": "7a9c008a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8b94becc",
    "metadata": {},
    "outputs": [],
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ae8cdf3e",
    "metadata": {},
    "outputs": [],
@@ -139,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b9a1c6b6",
    "metadata": {},
    "outputs": [
@@ -147,7 +146,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data source array is prepared - 0.03021693229675293 c\n"
+      "Data source array is prepared - 0.06562972068786621 c\n"
      ]
     }
    ],
@@ -157,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0e7bffc6",
    "metadata": {
     "scrolled": false
@@ -167,7 +166,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1440it [10:52,  2.21it/s]\n"
+      "1440it [05:31,  4.35it/s]\n"
      ]
     }
    ],
@@ -177,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "a3d632b8",
    "metadata": {},
    "outputs": [],
@@ -187,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "013a5587",
    "metadata": {
     "scrolled": false
@@ -198,105 +197,105 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "24/24 [==============================] - 1s 19ms/step - loss: 56.9776 - accuracy: 0.5232 - val_loss: 4.5959 - val_accuracy: 0.6154\n",
+      "24/24 [==============================] - 1s 9ms/step - loss: 55.3946 - accuracy: 0.5086 - val_loss: 29.2438 - val_accuracy: 0.4462\n",
       "Epoch 2/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 11.8465 - accuracy: 0.6029 - val_loss: 7.9558 - val_accuracy: 0.5385\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 13.2123 - accuracy: 0.5652 - val_loss: 4.4521 - val_accuracy: 0.5769\n",
       "Epoch 3/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 6.2331 - accuracy: 0.6698 - val_loss: 1.4949 - val_accuracy: 0.8308\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 5.6153 - accuracy: 0.6647 - val_loss: 1.0421 - val_accuracy: 0.8154\n",
       "Epoch 4/50\n",
-      "24/24 [==============================] - 0s 5ms/step - loss: 3.5220 - accuracy: 0.7273 - val_loss: 2.2790 - val_accuracy: 0.7615\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 4.5742 - accuracy: 0.6475 - val_loss: 2.4894 - val_accuracy: 0.6923\n",
       "Epoch 5/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 2.6464 - accuracy: 0.7067 - val_loss: 0.5272 - val_accuracy: 0.8231\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 3.2456 - accuracy: 0.6604 - val_loss: 3.5844 - val_accuracy: 0.5462\n",
       "Epoch 6/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 1.7688 - accuracy: 0.7530 - val_loss: 0.6605 - val_accuracy: 0.8308\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 2.3853 - accuracy: 0.7144 - val_loss: 0.6626 - val_accuracy: 0.8308\n",
       "Epoch 7/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 1.2820 - accuracy: 0.7899 - val_loss: 0.6919 - val_accuracy: 0.8385\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 1.4583 - accuracy: 0.7513 - val_loss: 0.9124 - val_accuracy: 0.7462\n",
       "Epoch 8/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.9360 - accuracy: 0.7933 - val_loss: 0.4558 - val_accuracy: 0.8308\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 1.1402 - accuracy: 0.7521 - val_loss: 0.7722 - val_accuracy: 0.7769\n",
       "Epoch 9/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.7621 - accuracy: 0.8216 - val_loss: 0.4986 - val_accuracy: 0.8385\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.8012 - accuracy: 0.7942 - val_loss: 0.3557 - val_accuracy: 0.8308\n",
       "Epoch 10/50\n",
-      "24/24 [==============================] - 0s 6ms/step - loss: 0.8539 - accuracy: 0.7959 - val_loss: 0.6516 - val_accuracy: 0.8077\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.7630 - accuracy: 0.8027 - val_loss: 0.3714 - val_accuracy: 0.8462\n",
       "Epoch 11/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.6515 - accuracy: 0.8087 - val_loss: 0.2430 - val_accuracy: 0.8923\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.6394 - accuracy: 0.8096 - val_loss: 0.3203 - val_accuracy: 0.8769\n",
       "Epoch 12/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.5451 - accuracy: 0.8268 - val_loss: 0.2200 - val_accuracy: 0.9077\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.4702 - accuracy: 0.8336 - val_loss: 0.4982 - val_accuracy: 0.7846\n",
       "Epoch 13/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.3880 - accuracy: 0.8748 - val_loss: 0.2287 - val_accuracy: 0.8846\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.4596 - accuracy: 0.8302 - val_loss: 0.4928 - val_accuracy: 0.8000\n",
       "Epoch 14/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.4398 - accuracy: 0.8431 - val_loss: 0.2204 - val_accuracy: 0.9231\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.4483 - accuracy: 0.8439 - val_loss: 0.2608 - val_accuracy: 0.8769\n",
       "Epoch 15/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.3609 - accuracy: 0.8765 - val_loss: 0.1913 - val_accuracy: 0.9308\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.3309 - accuracy: 0.8714 - val_loss: 0.4206 - val_accuracy: 0.8462\n",
       "Epoch 16/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2795 - accuracy: 0.9005 - val_loss: 0.2003 - val_accuracy: 0.9154\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.3776 - accuracy: 0.8585 - val_loss: 0.3190 - val_accuracy: 0.8923\n",
       "Epoch 17/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2705 - accuracy: 0.8962 - val_loss: 0.1834 - val_accuracy: 0.9231\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.3935 - accuracy: 0.8499 - val_loss: 0.2466 - val_accuracy: 0.8846\n",
       "Epoch 18/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2996 - accuracy: 0.8928 - val_loss: 0.2374 - val_accuracy: 0.9077\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.3796 - accuracy: 0.8551 - val_loss: 0.2889 - val_accuracy: 0.9154\n",
       "Epoch 19/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2903 - accuracy: 0.8894 - val_loss: 0.1630 - val_accuracy: 0.9538\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.3669 - accuracy: 0.8705 - val_loss: 0.1976 - val_accuracy: 0.9077\n",
       "Epoch 20/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2816 - accuracy: 0.8962 - val_loss: 0.7008 - val_accuracy: 0.7615\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.3200 - accuracy: 0.8756 - val_loss: 0.2347 - val_accuracy: 0.8923\n",
       "Epoch 21/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.3542 - accuracy: 0.8748 - val_loss: 0.2676 - val_accuracy: 0.9077\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.3601 - accuracy: 0.8499 - val_loss: 0.2399 - val_accuracy: 0.8846\n",
       "Epoch 22/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2505 - accuracy: 0.9117 - val_loss: 0.2209 - val_accuracy: 0.9000\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.3099 - accuracy: 0.8885 - val_loss: 0.2334 - val_accuracy: 0.9077\n",
       "Epoch 23/50\n",
-      "24/24 [==============================] - 0s 6ms/step - loss: 0.2817 - accuracy: 0.8877 - val_loss: 0.2644 - val_accuracy: 0.9077\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.2892 - accuracy: 0.8851 - val_loss: 0.2866 - val_accuracy: 0.8846\n",
       "Epoch 24/50\n",
-      "24/24 [==============================] - 0s 6ms/step - loss: 0.2706 - accuracy: 0.8911 - val_loss: 0.1461 - val_accuracy: 0.9538\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.2492 - accuracy: 0.9048 - val_loss: 0.1840 - val_accuracy: 0.9385\n",
       "Epoch 25/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.3442 - accuracy: 0.8628 - val_loss: 0.1624 - val_accuracy: 0.9462\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.2364 - accuracy: 0.9057 - val_loss: 0.1682 - val_accuracy: 0.9231\n",
       "Epoch 26/50\n",
-      "24/24 [==============================] - 0s 6ms/step - loss: 0.3175 - accuracy: 0.8722 - val_loss: 0.2237 - val_accuracy: 0.8923\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.2278 - accuracy: 0.9168 - val_loss: 0.2283 - val_accuracy: 0.9077\n",
       "Epoch 27/50\n",
-      "24/24 [==============================] - 0s 5ms/step - loss: 0.3143 - accuracy: 0.8834 - val_loss: 0.2812 - val_accuracy: 0.8923\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.2283 - accuracy: 0.9134 - val_loss: 0.1549 - val_accuracy: 0.9154\n",
       "Epoch 28/50\n",
-      "24/24 [==============================] - 0s 4ms/step - loss: 0.3053 - accuracy: 0.8688 - val_loss: 0.2835 - val_accuracy: 0.8769\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.2404 - accuracy: 0.9091 - val_loss: 0.1704 - val_accuracy: 0.9385\n",
       "Epoch 29/50\n",
-      "24/24 [==============================] - 0s 4ms/step - loss: 0.3121 - accuracy: 0.8739 - val_loss: 0.2978 - val_accuracy: 0.8769\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.2132 - accuracy: 0.9202 - val_loss: 0.3367 - val_accuracy: 0.8846\n",
       "Epoch 30/50\n",
-      "24/24 [==============================] - 0s 4ms/step - loss: 0.2991 - accuracy: 0.8516 - val_loss: 0.2420 - val_accuracy: 0.8846\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.1958 - accuracy: 0.9374 - val_loss: 0.1466 - val_accuracy: 0.9385\n",
       "Epoch 31/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2398 - accuracy: 0.9048 - val_loss: 0.1597 - val_accuracy: 0.9308\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.2184 - accuracy: 0.9220 - val_loss: 0.1359 - val_accuracy: 0.9308\n",
       "Epoch 32/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2242 - accuracy: 0.9091 - val_loss: 0.2323 - val_accuracy: 0.9154\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.3141 - accuracy: 0.8842 - val_loss: 0.1421 - val_accuracy: 0.9385\n",
       "Epoch 33/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2308 - accuracy: 0.9039 - val_loss: 0.1860 - val_accuracy: 0.9308\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.4270 - accuracy: 0.8499 - val_loss: 0.4055 - val_accuracy: 0.8462\n",
       "Epoch 34/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2067 - accuracy: 0.9117 - val_loss: 0.1622 - val_accuracy: 0.9308\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.2797 - accuracy: 0.8902 - val_loss: 0.2102 - val_accuracy: 0.8846\n",
       "Epoch 35/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2151 - accuracy: 0.9151 - val_loss: 0.1799 - val_accuracy: 0.9308\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.2270 - accuracy: 0.9005 - val_loss: 0.1394 - val_accuracy: 0.9538\n",
       "Epoch 36/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.1835 - accuracy: 0.9245 - val_loss: 0.2010 - val_accuracy: 0.9231\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.1705 - accuracy: 0.9340 - val_loss: 0.1446 - val_accuracy: 0.9385\n",
       "Epoch 37/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2241 - accuracy: 0.9082 - val_loss: 0.5583 - val_accuracy: 0.8077\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.1865 - accuracy: 0.9262 - val_loss: 0.1434 - val_accuracy: 0.9231\n",
       "Epoch 38/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.4190 - accuracy: 0.8328 - val_loss: 0.2229 - val_accuracy: 0.9462\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.1940 - accuracy: 0.9305 - val_loss: 0.1391 - val_accuracy: 0.9308\n",
       "Epoch 39/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.3937 - accuracy: 0.8508 - val_loss: 0.2977 - val_accuracy: 0.8692\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.1599 - accuracy: 0.9314 - val_loss: 0.2240 - val_accuracy: 0.8923\n",
       "Epoch 40/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.3373 - accuracy: 0.8765 - val_loss: 0.3360 - val_accuracy: 0.8462\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.1869 - accuracy: 0.9322 - val_loss: 0.1255 - val_accuracy: 0.9462\n",
       "Epoch 41/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.3435 - accuracy: 0.8593 - val_loss: 0.2581 - val_accuracy: 0.8923\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.1631 - accuracy: 0.9391 - val_loss: 0.3436 - val_accuracy: 0.8846\n",
       "Epoch 42/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2034 - accuracy: 0.9177 - val_loss: 0.3218 - val_accuracy: 0.8692\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.1821 - accuracy: 0.9305 - val_loss: 0.3632 - val_accuracy: 0.8538\n",
       "Epoch 43/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.1776 - accuracy: 0.9331 - val_loss: 0.1040 - val_accuracy: 0.9692\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.1859 - accuracy: 0.9305 - val_loss: 0.1684 - val_accuracy: 0.9308\n",
       "Epoch 44/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2209 - accuracy: 0.9074 - val_loss: 0.1205 - val_accuracy: 0.9615\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.1656 - accuracy: 0.9383 - val_loss: 0.1284 - val_accuracy: 0.9385\n",
       "Epoch 45/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2152 - accuracy: 0.9125 - val_loss: 0.0972 - val_accuracy: 0.9692\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.1856 - accuracy: 0.9262 - val_loss: 0.0935 - val_accuracy: 0.9538\n",
       "Epoch 46/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2292 - accuracy: 0.8971 - val_loss: 0.1262 - val_accuracy: 0.9615\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.1301 - accuracy: 0.9503 - val_loss: 0.1405 - val_accuracy: 0.9385\n",
       "Epoch 47/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.1589 - accuracy: 0.9322 - val_loss: 0.1443 - val_accuracy: 0.9308\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.1056 - accuracy: 0.9674 - val_loss: 0.0990 - val_accuracy: 0.9538\n",
       "Epoch 48/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2378 - accuracy: 0.8602 - val_loss: 0.1884 - val_accuracy: 0.8923\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.1268 - accuracy: 0.9545 - val_loss: 0.0885 - val_accuracy: 0.9769\n",
       "Epoch 49/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2286 - accuracy: 0.8491 - val_loss: 0.2188 - val_accuracy: 0.8923\n",
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.1266 - accuracy: 0.9494 - val_loss: 0.3172 - val_accuracy: 0.9077\n",
       "Epoch 50/50\n",
-      "24/24 [==============================] - 0s 7ms/step - loss: 0.2252 - accuracy: 0.8602 - val_loss: 0.0878 - val_accuracy: 0.9462\n"
+      "24/24 [==============================] - 0s 4ms/step - loss: 0.1639 - accuracy: 0.9348 - val_loss: 0.1942 - val_accuracy: 0.9231\n"
      ]
     }
    ],
@@ -331,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "c9ea11c9",
    "metadata": {},
    "outputs": [
@@ -339,7 +338,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5/5 [==============================] - 0s 3ms/step - loss: 0.0784 - accuracy: 0.9444\n"
+      "5/5 [==============================] - 0s 2ms/step - loss: 0.1206 - accuracy: 0.9722\n"
      ]
     }
    ],
@@ -357,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "37439375",
    "metadata": {},
    "outputs": [
@@ -376,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "9ad5984e",
    "metadata": {},
    "outputs": [
@@ -384,7 +383,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gender definded - female / value = 0.9999102354049683\n"
+      "Gender definded - male / value = 8.956877536547836e-06\n"
      ]
     }
    ],
@@ -396,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f978efa2",
+   "id": "c40e02b4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -404,7 +403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -418,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
